# StandardsWeb

./: .env.example  .gitignore  ISTS_PRD.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_content_hash_to_standards.py  0003_add_document_uploaded_event_type.py  0004_add_system_config.py  0005_add_stage_and_published_date.py  0006_add_parent_standard_id.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  dashboard.py  distribution_lists.py  documents.py  feeds.py  notifications.py  standards.py  users.py
backend/app/core/: email.py  exceptions.py  logging.py  middleware.py  security.py  smtp_config.py  storage.py
backend/app/models/: __init__.py  audit_log.py  celery_schedule.py  distribution_list.py  document.py  notification.py  notification_mapping.py  password_reset_token.py  refresh_token.py  rss_feed.py  standard.py  standard_history.py  system_config.py  user.py
backend/app/schemas/: admin.py  auth.py  dashboard.py  distribution_list.py  document.py  feed.py  notification.py  pagination.py  standard.py  user.py
backend/app/services/: audit_service.py  auth_service.py  dashboard_service.py  document_service.py  feed_service.py  notification_service.py  standard_service.py  user_service.py
backend/app/tasks/: __init__.py  feeds.py  maintenance.py  notifications.py
backend/scripts/: seed.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: admin.ts  auth.ts  dashboard.ts  distributionLists.ts  documents.ts  feeds.ts  notifications.ts  standards.ts  users.ts
frontend/src/components/: Layout.tsx  NotificationBell.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx  ToastContext.tsx
frontend/src/lib/: axios.ts  utils.ts  (+1 more)
(+19 files in other folders)
